syntax = "proto3";

option java_multiple_files = true;
option java_package = "gng.learning.grpc";
option java_outer_classname = "UserInfoServiceProto";

service UserInfoService {
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse);
}

message UserInfoRequest {
  string userId = 1;
}

message UserInfoResponse {
  bool found = 1;
  string userName = 2;
}